testsuite/tests/splice-imports/T26090.stderr
T26090.hs:2:17: error: [GHC-28914]
    • Level error: ‘a’ is bound at level 1 but used at level 0
    • Available from the imports:
      • imported from ‘T26090A’ at 1 at T26090.hs:8:1-20

T26090.hs:4:17: error: [GHC-28914]
    • Level error: ‘s’ is bound at level 1 but used at level 0
    • Available from the imports:
      • imported from ‘T26090A’ at 1 at T26090.hs:8:1-20
    • In the export: S(s)

T26090.hs:5:17: error: [GHC-28914]
    • Level error: ‘R’ is bound at level 1 but used at level 0
    • Available from the imports:
      • imported from ‘T26090A’ at 1 at T26090.hs:8:1-20

